--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,4 +5,20 @@
 
 * {
     font-family: 'figtree', sans-serif;
+    scrollbar-width: medium;
+    scrollbar-color: rgba(25, 60, 184, 0.3) rgba(229, 231, 235, 0.5);
 }
+
+*::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: rgba(229, 231, 235, 0.5);
+    border-radius: 10px;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: rgba(25, 60, 184, 0.3);
+    border-radius: 10px;
+  }
